# patchline

./: .env.example  .gitignore  .lintstagedrc.cjs  .prettierignore  AGENTS.md  README.md  apphost.mts  aspire.config.json  eslint.config.mjs  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.apphost.json
.agents/skills/patchline-adr/: SKILL.md
.agents/skills/patchline-adr/references/: adr-template.md
.agents/skills/patchline-behavior/: SKILL.md
.agents/skills/patchline-behavior/references/: behavior-template.md
.aspire/modules/: .codegen-hash  aspire.mts
.claude/skills/playwright-cli/: SKILL.md
apphost/: AGENTS.md  README.md  apphost.mts  eslint.config.mjs  package-lock.json  package.json  tsconfig.apphost.json
apps/: AGENTS.md  README.md
apps/server/: AGENTS.md  README.md  pyproject.toml
apps/web/: AGENTS.md  README.md
docs/: AGENTS.md  README.md  day-0-checklist.md  documentation-strategy.md  learning-log.md  n8n-friction-log.md  project-brief.md  roadmap.md
docs/behaviors/: AGENTS.md  README.md  intake-desk.md
docs/decisions/: 0001-project-direction.md  0002-n8n-first-boundary.md  0003-reference-based-context.md  0004-repo-tooling.md  0005-root-aspire-apphost.md  0006-nested-typescript-apphost.md  README.md
evals/: AGENTS.md  README.md
evals/n8n/: AGENTS.md  README.md
infra/: AGENTS.md  README.md
infra/argocd/: AGENTS.md  README.md
infra/aspire/: AGENTS.md  README.md  package.json  tsconfig.json
infra/k8s/: AGENTS.md  README.md
workflows/: AGENTS.md  README.md
workflows/n8n/: AGENTS.md  README.md
(+4 files in other folders)
