[project]
name = "patchline-server"
version = "0.1.0"
description = "Future FastAPI and Microsoft Agent Framework service for Patchline."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pyright>=1.1.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.8.0",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

